# newcomer-training

./: .env  1_env.py  1_sys.py  2_abstraction.py  2_encapsulation.py  2_inheritance.py  2_logging_to_console.py  2_logging_to_file.py  2_polymorphism.py  3-1.py  3-2.py  3-3-0.py  3-3.py  Package.py  README.md  package.py  pyproject.toml  script_example.py
Package/: __init__.py
