[project]
name = "poerty install"
version = "poetry shell"
description = "poetry add requests"
authors = [
    {name = "shou",email = "gerryearth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
